[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eptools"
version = "0.1.14"
description = "Shared utilities for the Inchcape Suzuki employer project"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eptools*"]
