[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eptools"
version = "0.1.61"
description = "Shared utilities for the Inchcape Suzuki employer project"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "pyarrow",
    "optuna",
    "sqlalchemy",
    "psycopg2-binary",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eptools*"]
